# MLIRSwift

./: .gitignore  .gitmodules  .swift-format  LICENSE.txt  Package.swift  README.md
.github/workflows/: buildAndTest.yml
Resources/: MLIR.pc
Sources/CCoreMLIR/: module.modulemap
Sources/CDialects/: CDialects.h  module.modulemap
Sources/CMLIR/: CMLIR.h  module.modulemap
Sources/CMLIRDialects/: module.modulemap
Sources/CMLIRStandard/: CMLIRStandard.h  module.modulemap
Sources/CSCF/: CSCF.h  module.modulemap
Sources/CStandard/: CStandard.h  module.modulemap
Sources/CallStackTest/: main.swift
Sources/CoreMLIR/Diagnostics/: Diagnostics.swift
Sources/CoreMLIR/Helpers/: Array<String>.swift  Builder.swift  Callback Streamable.swift  Collect Diagnostics.swift  Member Collection.swift  Parse.swift  Sequence.swift  String.swift  Type List.swift  Type Wrapper.swift
Sources/CoreMLIR/IR/: Attribute.swift  Block.swift  Context.swift  Diagnostics.swift  Dialect.swift  Location.swift  Module.swift  Operation.swift  Region.swift  Type.swift  Value.swift
Sources/Dialects/: Attributes.swift  Operations.swift  SCF.swift
Sources/MLIR/: Attributes.swift  Block Operations Append (Generated).swift  Builtin Attributes.swift  Configuration.swift  Context.swift  Dialect Registry.swift  Export.swift  Identifier.swift  Location.swift  MLIRSwift.swift  Module.swift  Operation Definition Initializers (Generated).swift  Operation.swift  Region.swift  Register All Dialects.swift  SCF.swift  Standard Dialect.swift  Standard.swift  String.swift  Type.swift  Value.swift
Sources/MLIR-Old/Configuration/: Dialect.swift
Sources/MLIR-Old/IR/: Block.swift  (+2 more)
Sources/MLIRDialect/: Attribute.swift  Bridging.swift  Dialect.swift  Type.swift
Sources/MLIRDialects/: Register All Dialects.swift  Standard.swift
Sources/MLIRStandard/: Operations.swift  Standard.swift  Types.swift
Sources/Old-dialects/: Attributes.swift  Operations.swift  Standard.swift
Sources/SCF/: SCF.swift
Sources/Standard/: Attributes.swift  Operations.swift  Standard.swift  Types.swift
Sources/_MLIR/: Builtin Attributes.swift
Tests/CoreMLIRTests/: Configuration.swift  Diagnostic Tests.swift
Tests/DialectTests/: Module Tests.swift  Region Tests.swift  Type Tests.swift
Tests/MLIRDialectsTests/: Configuration.swift  Module Tests.swift  Type Tests.swift
Tests/MLIRStandardTests/: Configuration.swift  Module Tests.swift  Region Tests.swift  Type Tests.swift
Tests/MLIRTests/: Attribute Tests.swift  Block Tests.swift  Configuration.swift  Diagnostic Tests.swift  MLIRTests.swift  Module Tests.swift  Type Tests.swift
Tools/: Registration.h  build-dependencies  generate-boilerplate  llvm-commit  swift-format  swift-format-spec
Tools/BoilerplateGenerator/: Package.swift
Tools/Docker/: Dockerfile
Tools/MLIRSwiftSupport/: CMakeLists.txt  MLIRSwiftSupport.cpp  MLIRSwiftSupport.h
Tools/SwiftFormat/: Package.resolved  Package.swift  README.md
Utilities/: build-dependencies  build-llvm  mlir-install-targets  required-llvm-targets
Utilities/BoilerplateGenerator/: Package.swift  README.md
(+131 files in other folders)
